<resources>
    <string name="app_name">Economy Logboook</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete_all">Delete Everything</string>

    <!-- display activity-->
    <string name="dist_total_title">Total Distance:</string>
    <string name="fuel_total_title">Total Fuel Used:</string>
    <string name="econ_total_title">Average Economy:</string>
    <string name="econ_total_units">%1$s/%2$s</string>

    <!-- Array adapter-->
    <string name="adapter_dist_title">Distance:</string>
    <string name="adapter_fuel_title">Fuel:</string>
    <string name="adapter_date_title">Date:</string>
    <string name="dist_placeholder">1200km</string>
    <string name="fuel_placeholder">400L</string>
    <string name="date_placeholder">Feb 29, 2015</string>

    <!-- Settings-->
    <string name="default_dist_unit">KILOMETERS</string>
    <string name="settings_dist">Distance</string>
    <string name="settings_fuel">Fuel</string>
    <string name="default_fuel_unit">LITERS</string>
    <string name="settings_units_category">Units</string>

    <!-- New entry-->
    <string name="fuel_hint">Fuel (%1$s)</string>
    <string name="dist_hint">Distance (%1$s)</string>
    <string name="entry_create_date_title">Date</string>
    <string name="distance_hint">Distance</string>
    <string name="fuel_hint_2">Fuel</string>
    <string name="title_section0">Economy List</string>
    <string name="title_section1">Economy Graphs</string>
</resources>
