<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="apps.czeidler.economylogboook.EntryCreate"
    tools:showIn="@layout/activity_entry_create"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entry_create_date_title"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/date_button"
        style="@style/Widget.AppCompat.Light.Spinner.DropDown.ActionBar"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dist_edit"
        android:inputType="numberDecimal"
        android:hint="@string/distance_hint"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/fuel_edit"
        android:hint="@string/fuel_hint_2"/>

</LinearLayout>