<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="apps.czeidler.economylogboook.mainactivity.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dist_total_title"
            android:id="@+id/dist_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="KM"
            android:id="@+id/dist_unit"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12000"
            android:id="@+id/dist"
            android:layout_toStartOf="@id/dist_unit"
            android:paddingRight="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuel_total_title"
            android:layout_below="@id/dist_title"
            android:id="@+id/fuel_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fuel_unit"
            android:text="L"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/fuel_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fuel_data"
            android:text="345"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:layout_alignBaseline="@id/fuel_title"
            android:layout_alignEnd="@id/dist"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/econ_total_title"
            android:layout_below="@id/fuel_title"
            android:id="@+id/econ_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/econ_unit"
            android:text="KM/L"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/econ_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/econ_data"
            android:text="10"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:layout_alignBaseline="@id/econ_title"
            android:layout_alignEnd="@id/dist"/>
    </RelativeLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/entry_list">

    </ListView>

</LinearLayout>

